fix(common): JDK8兼容——List.of→Collections.singletonList, Path.of→Paths.get
CI 使用 JDK 1.8（Temurin），List.of() 和 Path.of() 不可用。
- ImpactAnalyzerTest: List.of → Collections.singletonList/Arrays.asList
- DiffParserTest: Path.of → Paths.get

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>